--- a/public/index.html
+++ b/public/index.html
@@ -64,38 +64,7 @@
       
       <!-- card -->
       <div class="row">
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/71U0mALwCXL._SX425_.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Crusher Wireless Headphone</h5>
-                <p class="card-text">Crusher Wireless delivers powerful, dual-channel haptic bass</p>
-                <a href="#" class="btn btn-primary">View Product</a>
-              </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/71U0mALwCXL._SX425_.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Crusher Wireless Headphone</h5>
-                <p class="card-text">Crusher Wireless delivers powerful, dual-channel haptic bass</p>
-                <a href="#" class="btn btn-primary">View Product</a>
-              </div>
-          </div>
-        </div>
-
-         <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/71U0mALwCXL._SX425_.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Crusher Wireless Headphone</h5>
-                <p class="card-text">Crusher Wireless delivers powerful, dual-channel haptic bass</p>
-                <a href="#" class="btn btn-primary">View Product</a>
-              </div>
-          </div>
-        </div>
+        
       </div>
       <!-- end card -->
 
@@ -108,5 +77,22 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="index.js" defer></script>
   </body>
 </html>
+
+
+
+<template id="card">
+  <div class="col-sm-4">
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/71U0mALwCXL._SX425_.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Crusher Wireless Headphone</h5>
+          <p class="card-text">Crusher Wireless delivers powerful, dual-channel haptic bass</p>
+          <a href="#" class="btn btn-primary">View Product</a>
+        </div>
+    </div>
+  </div>
+</template>
